version/0.30/_sources/api/solver/_autosummary/settings/source_term_settings.rst.txt
:orphan:

.. _source_term_settings:

source_term_settings
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.source_term_settings
    :show-inheritance:

.. rubric:: Attributes

====================================================================   ====================================================================================

Attribute                                                                                                                                           Summary

====================================================================   ====================================================================================
:ref:`linearization <linearization>`                                          Menu containing options to enable/disable linearization of DPM source terms. 

:ref:`impl_mom_cplg_enabled <impl_mom_cplg_enabled>`                                   Enable/disable implicit treatment for the DPM momentum source terms.

:ref:`impl_cplg_enabled <impl_cplg_enabled>`                                                    Enable/disable implicit treatment for all DPM source terms.

:ref:`linear_change_enabled <linear_change_enabled>`                              Enable/disable the linear growth of DPM source terms every DPM iteration.

:ref:`reset_sources_at_timestep <reset_sources_at_timestep>`                   Enable/disable flushing of DPM source terms at beginning of every time step.

:ref:`underrelaxation_factor <underrelaxation_factor>`                                                         The DPM source term under-relaxation factor.

:ref:`time_accurate_sources_enabled <time_accurate_sources_enabled>`       Enable/disable second order accurate formulation for transient DPM source terms.

====================================================================   ====================================================================================

.. rubric:: Included in:

==========================   ================

Parent                                Summary

==========================   ================
:ref:`numerics <numerics>`       Main object.

==========================   ================

